# local-internet-archive

./: readme.md
ios-local-internet-archive/: .gitignore
ios-local-internet-archive/ios-local-internet-archive/: Archive.swift  ArchiveViewModel.swift  ContentView.swift  DetailsView.swift  Info.plist  Persistence.swift  ios_local_internet_archiveApp.swift
ios-local-internet-archive/ios-local-internet-archive.xcodeproj/: project.pbxproj
ios-local-internet-archive/ios-local-internet-archive.xcodeproj/project.xcworkspace/xcuserdata/logankeenan.xcuserdatad/: UserInterfaceState.xcuserstate
ios-local-internet-archive/ios-local-internet-archive.xcodeproj/xcuserdata/logankeenan.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
ios-local-internet-archive/ios-local-internet-archive.xcodeproj/xcuserdata/logankeenan.xcuserdatad/xcschemes/: xcschememanagement.plist
ios-local-internet-archive/ios-local-internet-archive/ios_local_internet_archive.xcdatamodeld/: .xccurrentversion
rust-ios/: .gitignore  Cargo.toml  build.sh
rust-ios/src/: lib.rs
